
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MADV_DONTNEED ;
 scalar_t__ madvise (int ,int,int ) ;
 int map ;
 int printf (char*,int) ;

void *madviseThread(void *arg) {
  int i,c=0 ;
  for(i=0;i<200000000;i++)
    c+=madvise(map,100,MADV_DONTNEED) ;
  printf("madvise %d\n\n",c) ;
                                           }
