; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40838.c_madviseThread.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40838.c_madviseThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@map = common dso_local global i32 0, align 4
@MADV_DONTNEED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"madvise %d\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @madviseThread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %5, align 4
  store i32 0, i32* %4, align 4
  br label %6

6:                                                ; preds = %17, %1
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 200000000
  br i1 %8, label %9, label %20

9:                                                ; preds = %6
  %10 = load i32, i32* @map, align 4
  %11 = load i32, i32* @MADV_DONTNEED, align 4
  %12 = call i64 @madvise(i32 %10, i32 100, i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = sext i32 %13 to i64
  %15 = add nsw i64 %14, %12
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %5, align 4
  br label %17

17:                                               ; preds = %9
  %18 = load i32, i32* %4, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %4, align 4
  br label %6

20:                                               ; preds = %6
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i64 @madvise(i32, i32, i32) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
